# twapi

./: .gitattributes  .gitignore  .hgeol  .hgignore  BUILD_INSTRUCTIONS  Makefile.in  README.md  buildmingw64.bat  configure  configure.ac  configure.in  pkgIndex.tcl.in  release-mingw.cmd  release.cmd  twapi_entry.tcl.in
.github/workflows/: mingw.yml  msvc.yml
doc/: addusertolocalgroup.example  announce.md  base.man  beep.example  bringtoforeground.example  certs.man  checkavailablespace.example  checkunicodefilenames.example  clipboard.man  com.man  crypto.man  download.xcf  etw.man  exportfileshare.example  generate_web_page.tcl  generate_www_index.tcl  gethtmlfromclipboard.example  google-ads-horizontal-link-unit.js  google-ads.js  google-searchbox.js  hidewindows.example  index.htf  input.man  installation.man  installservice.example  killprograms.example  listdrives.example  listexportedshares.example  listgroupsforuser.example  listproducts.example  listremotedrives.example  listusers.example  listusersingroup.example  makefile  minimizeapp.example  movewindowtoorigin.example  msi.man  namedpipe.man  opensysmenuwithmouse.example  overview.man  (+33 more)
dyncall/: readme.txt
tcl-installer/: license.rtf  msibuild.tcl  wixui.wxs
tests/: ClipboardTest.pptx  apputil.test  base.test  clipboard.test  com.test  console.test  crypto.test  csv.tcl  device.test  disk.vbs  echoservice.tcl  etw.test  eventlog.test  fillServices.ps1  handle.test  input.test  namedpipe.test  network.test  nls.test  npecho.tcl  osinfo.test  osinfo.vbs  parseargs.test  pdh.test  power.test  process.test  registry.test  resource.test  security.test  services.test  share.test  share.vbs  shell.test  storage.test  testutil.tcl  thread.vbs  tls.test  twapi-testcases.xls  ui.test  vixrunner.tcl
tests/certs/: grcrevoked.pem  test-ev-ecc.ssl.com.pem  twapitest.pfx  update-certs.sh  www.google.com-expired.pem  www.google.com.pem  www.yahoo.com.pem
tests/comtest/: README  StdAfx.h  TwapiTest.h  TwapiTest.rgs  comtest.def  comtestps.def  comtestps.mk  comtestsetup.tcl  dlldata.c
tests/rctest/: rctest.mak  rctest.rc
tools/: adocgen.tcl  commentify.tcl  createimagedatafile.tcl  createtmfile.tcl  h2c-bwidget.cfg  h2c-rbc.cfg  h2c-tcl-tk.cfg  h2c-tcllib-apps.cfg  h2c-tcllib-modules.cfg  h2c-tcllib.cfg  h2c-tclwinhelp.cfg  h2c-tdbc.cfg  h2c-tdom.cfg  h2c-thread.cfg  h2c-tklib-modules.cfg  h2c-tklib.cfg  h2c-twapi.cfg  h2c-udp.cfg  html2chm.tcl  makepkgindex.tcl  makeziptm.cmd  msibuild.tcl  msidelrecs.tcl  msys-vcsetup  sdx.kit  tclwinhelp.html  twapi-dtp.kit
tools/openssl/: PASSPHRASE  makeca.sh
twapi/: .clang-format  .ignore  BUILD_INSTRUCTIONS  LICENSE  buildall.cmd  buildall64.cmd  common.inc  makefile  release.cmd  release.ps1  release1.cmd
twapi/account/: account.c  makefile
twapi/apputil/: apputil.c  makefile
twapi/base/: adsi.c  async.c  calls.c  clipboard.c  com.c  console.c  crypto.c  cstruct.c  device.c  dirmonitor.c  disk.c  envset.cmd  errors.c  etw.c  eventlog.c  ffi.c  file.c  gdi.c  guids.c  hotkey.c  keylist.c  lzmadec.h  lzmainterface.c  lzmatypes.h  makefile  memlifo.c  memlifo.h  mstask.c  mycrt.c  namedpipe.c  network.c  nls.c  os.c  parseargs.c  pdh.c  pipe.c  power.c  printdevices.c  printer.c  printioctl.c  (+35 more)
twapi/clipboard/: clipboard.c  makefile
twapi/com/: com.c  comserver.c  makefile  twapi_com.h
twapi/console/: console.c  makefile
twapi/crypto/: crypto.c  makefile  pbkdf2.c  pbkdf2.h  sspi.c  twapi_crypto.h
twapi/device/: device.c  makefile
twapi/doc/: addlocalgroup.example  adduser.example  announce.md  announce.txt  apputil.man  base.man  certs.man  changedrivelabel.example  changeserviceaccount.example  changewindowcaption.example  clipboard.man  com.man  comserver.man  console.man  continuoussystemsound.example  crypto.man  deletelocalgroup.example  deleteuser.example  desktop.man  device.man  disk.man  dumpeventlog.example  errors.man  etw.man  eventlog.man  examples.man  exitprograms.example  generate_mshelp_contents.tcl  generate_mshelp_hhp.tcl  generate_mshelp_index.tcl  generate_web_page.tcl  getclipboard.example  handles.man  history.html  hotkey.example  html_head.inc  idx.man  index.htf  inifile.man  input.man  (+61 more)
twapi/etw/: etw.c  makefile
twapi/eventlog/: eventlog.c  evt.c  makefile  twapi_eventlog.h
twapi/include/: common.inc  common.rc  common.rcinc  memlifo.h  rules.inc  tooldefs.inc  twapi.h  twapi_module_static_init.h  twapi_module_static_proto.h  twapi_wm.h  version.inc  zlist.h
twapi/input/: hotkey.c  input.c  makefile
twapi/metoo/: makefile
twapi/msi/: makefile
twapi/mstask/: makefile  mstask.c
twapi/multimedia/: makefile  multimedia.c
twapi/namedpipe/: makefile  namedpipe.c
twapi/network/: makefile  network.c  resolve.c
twapi/nls/: makefile  nls.c
twapi/os/: makefile  os.c
twapi/pdh/: makefile  pdh.c
twapi/power/: makefile
twapi/printer/: makefile
twapi/process/: makefile  process.c
twapi/rds/: makefile  rds.c
twapi/registry/: makefile  registry.c
twapi/resource/: makefile  resource.c
twapi/security/: makefile  security.c
twapi/service/: makefile  scm.c  service.c  twapi_service.h
twapi/share/: makefile  share.c
twapi/shell/: makefile  shell.c
twapi/storage/: dirmonitor.c  disk.c  makefile  storage.c  twapi_storage.h
twapi/synch/: makefile
twapi/tcl/: accounts.tcl  adsi.tcl  apputil.tcl  base.tcl  clipboard.tcl  com.tcl  console.tcl  crypto.tcl  desktop.tcl  device.tcl  disk.tcl  etw.tcl  eventlog.tcl  evt.tcl  handle.tcl  input.tcl  kitgen_setup_twapi_vfs.tcl  makefile  metoo.tcl  msi.tcl  mstask.tcl  namedpipe.tcl  network.tcl  nls.tcl  os.tcl  pdh.tcl  (+31 more)
win/: apputil.c  async.c  buildinfo.c  calls.c  clipboard.c  com.c  crypto.c  device.c  errors.c  etw.c  ffi.c  keylist.c  lzmadec.c  lzmainterface.c  makefile.vc  memlifo.c  memlifo.h  mstask.c  namedpipe.c  network.c  nls.c  os.c  pdh.c  process.c  recordarray.c  registry.c  resource.c  security.c  service.c  shell.c  tclobjs.c  trap.c  twapi.c  twapi.h  twapi_base.h  twapi_com.h  twapi_eventlog.h  twapi_sdkdefs.h  twapi_service.h  twapi_storage.h  (+6 more)
(+144 files in other folders)
